k8s/tremplin-api/service-tremplin-api.yml
---
kind: Service
apiVersion: v1
metadata:
  name: tremplin-api${HASH_BRANCH_NAME}
  labels:
    app: tremplin-api${HASH_BRANCH_NAME}
    branch: tremplin${HASH_BRANCH_NAME}
spec:
  selector:
    app: tremplin-api${HASH_BRANCH_NAME}
  ports:
  - port: ${PORT}
    name: api
