k8s/tremplin-api/ingress-tremplin-api.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tremplin-api${HASH_BRANCH_NAME}
  labels:
    app: tremplin-api${HASH_BRANCH_NAME}
    branch: tremplin${HASH_BRANCH_NAME}
spec:
  rules:
  - host: ${HASH_BRANCH_INGRESS}tremplin-api.${ENVIRONMENT}.factory.social.gouv.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: tremplin-api${HASH_BRANCH_NAME}
          servicePort: ${PORT}
